objects/ssot__BulkMessage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelEngagementNumber__c</fullName>
        <label>Channel Engagement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommunicationSubscriptionChannelTypeId__c</fullName>
        <label>Communication Subscription Channel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CountryRegion__c</fullName>
        <label>Country Region</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomDomainAddress__c</fullName>
        <label>Custom Domain Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DigitalContentId__c</fullName>
        <label>Digital Content</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DoesTrackClicks__c</fullName>
        <label>Does Track Clicks</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelType__c</fullName>
        <label>Engagement Channel Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowElementId__c</fullName>
        <label>Flow Element</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Bulk Message Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketAudienceId__c</fullName>
        <label>Market Audience</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketJourneyActivity__c</fullName>
        <label>Market Journey Activity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketSegmentId__c</fullName>
        <label>Market Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MessagePurpose__c</fullName>
        <label>Message Purpose</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SendMethodType__c</fullName>
        <label>Send Method Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoftwareApplication__c</fullName>
        <label>Software Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1696932794785_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BulkMessage_CommunicationSubscriptio_rel</label>
        <referenceTo>ssot__CommunicationSubscriptionChannelType__dlm</referenceTo>
        <relationshipLabel>BulkMessage_CommunicationSubscriptio_rel</relationshipLabel>
        <relationshipName>rel_1696932794785_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1698407092690_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BulkMessage_EngagementChannelId_map__rel</label>
        <referenceTo>ssot__EngagementChannel__dlm</referenceTo>
        <relationshipLabel>BulkMessage_EngagementChannelId_map__rel</relationshipLabel>
        <relationshipName>rel_1698407092690_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009183131_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BulkMessage_CampaignId_map_Campaign__rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>BulkMessage_CampaignId_map_Campaign__rel</relationshipLabel>
        <relationshipName>rel_1702009183131_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>